# SAR_DENOISE

./: README.md  env.sh  pyproject.toml
data_preparation/: doq_data_prep.ipynb  doq_speckle_noise.ipynb  sar_hf_dataset_512.ipynb  sar_preparation.ipynb
sar_denoise/: DDPMSpecklePipeline.py  dataset_transforms.py  sar_denoise_cal_db_taper.ipynb
scripts/: denoise_SAR.ipynb  denoise_doq.ipynb  train_conditional.py  train_unconditional.py  training_stats.ipynb  unconditional_gen.ipynb
