[tool.poetry]
name = "sar-denoise"
version = "0.1.0"
description = ""
authors = ["reginatfoley <regina.tamo@gmail.com>"]
readme = "README.md"
packages = [{include = "sar_denoise"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.1"
torchvision = "^0.17.1"
torchaudio = "^2.2.1"
ipykernel = "^6.29.3"
diffusers = {extras = ["training"], version = "^0.27.2"}
accelerate = "^0.28.0"
transformers = "^4.39.1"
ipywidgets = "^8.1.2"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
einops = "^0.7.0"
scipy = "^1.12.0"
seaborn = "^0.13.2"
xformers = "^0.0.25.post1"
datasets = {extras = ["vision"], version = "^2.18.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
